<resources>
    <string name="app_name">AndroidNavigatorLETI</string>
    <string name="title_activity_maps">Navigator LETI</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_text">Our app is best app in the world!</string>
    <string name="geolocation">Geolocation</string>
    <string name="save_search_history">Save search history</string>
    <string name="register">Register</string>
    <string name="approve">Approve</string>
    <string name="user_not_registered_title">You are not registered yet!</string>
    <string name="user_not_registered_text">Register to save search history</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="birthday_hint">Birth date</string>
    <string name="no_history_items">List is empty</string>
    <string name="make_search">Search</string>
    <string name="from">From</string>
    <string name="where">Where</string>
    <string name="root_on_map">Root</string>
    <string name="show_on_map">Show on map</string>
    <string name="my_location">My location</string>
    <string name="choose">Choose</string>
    <string name="input_error">Please, fill all fields</string>
    <string name="action_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="city_delimiter" translatable="false">, Санкт-Петербург</string>
    <string name="enter_another_address">Enter another address</string>
    <string name="enter_address">Enter address</string>
    <string name="route_time_text_min">~ %s min</string>
    <string name="route_time_text_hours">~ %s hours %s min</string>
    <string name="enable_location">You should enable geo location to use app</string>
    <string name="meters" translatable="false">%s m</string>
    <string name="kilometers" translatable="false">%s km</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>