<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/not_registered_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:letterSpacing="0.03"
        android:text="@string/user_not_registered_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/not_registered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:letterSpacing="0.03"
        android:text="@string/user_not_registered_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="@+id/not_registered_title"
        app:layout_constraintRight_toRightOf="@+id/not_registered_title"
        app:layout_constraintTop_toBottomOf="@+id/not_registered_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/RegistrationButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/register"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>