<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="60dp">

    <TextView
        android:id="@+id/from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:letterSpacing="0.03"
        android:text="@string/from"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_round_button"
        app:layout_constraintBottom_toTopOf="@+id/before_search_layout"
        app:layout_constraintLeft_toLeftOf="@+id/before_search_layout" />

    <include
        android:id="@+id/before_search_layout"
        layout="@layout/search_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/where_text"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/where_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:letterSpacing="0.03"
        android:text="@string/where"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_round_button"
        app:layout_constraintBottom_toTopOf="@+id/after_search_layout"
        app:layout_constraintLeft_toLeftOf="@+id/after_search_layout" />

    <include
        android:id="@+id/after_search_layout"
        layout="@layout/search_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/find_point_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_point_button"
        style="@style/SearchButton"
        android:layout_marginEnd="10dp"

        android:text="@string/show_on_map"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/make_root_button"
        style="@style/SearchButton"
        android:layout_marginStart="10dp"
        android:text="@string/root_on_map"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>