<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <include
        android:visibility="gone"
        android:id="@+id/speed_layout"
        layout="@layout/speed_container"
        android:layout_width="40dp"
        android:layout_height="130dp"
        android:layout_gravity="top|start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />

    <include
        android:visibility="gone"
        android:id="@+id/distance_layout"
        layout="@layout/distance_container"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="top|end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:backgroundTint="@color/app_white"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
        app:srcCompat="@drawable/ic_close" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/my_location_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/app_white"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
        app:srcCompat="@drawable/ic_location" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_button_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="60dp"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_location_button"
            style="@style/SearchButton"
            android:layout_marginEnd="10dp"
            android:text="@string/my_location"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_button"
            style="@style/SearchButton"
            android:layout_marginStart="10dp"
            android:text="@string/choose"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/android"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:letterSpacing="0.03"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="17dp"
            app:layout_constraintLeft_toLeftOf="@id/logo_image"
            app:layout_constraintRight_toRightOf="@id/logo_image"
            app:layout_constraintTop_toBottomOf="@id/logo_image" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>